fixed the images in the catalog + Email sender